Bug 426466 - doxygen latex formulas are highlighted differently in single-line and multi-line comment blocks (C/C++)
Summary: doxygen latex formulas are highlighted differently in single-line and multi-l...
Status: RESOLVED FIXED
Alias: None
Product: frameworks-syntax-highlighting
Classification: Frameworks and Libraries
Component: syntax (other bugs)
Version First Reported In: 5.74.0
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-09-13 09:01 UTC by Michael Uleysky
Modified: 2020-09-28 19:15 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Illustration of incorrect text highlighting (34.90 KB, image/png)
2020-09-13 09:01 UTC, Michael Uleysky
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Uleysky 2020-09-13 09:01:25 UTC
Created attachment 131587 [details]
Illustration of incorrect text highlighting

STEPS TO REPRODUCE
1. Create file test.c or test.cpp
2. Open it in kate (or kdevelop)
3. Type
/*!
 * Correctly highlighted text @f$a+b@f$ Incorrectly highlighted text
 */

//! Correctly highlighted text @f$a+b@f$ Correctly highlighted text
4. See result

OBSERVED RESULT
Text in a multiline block is not highlighted correctly.

EXPECTED RESULT
Text in a multiline block is highlighted correctly.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Gentoo Linux
(available in About System)
KDE Plasma Version: 5.74.0
KDE Frameworks Version: 5.74.0
Qt Version: 5.15.1

ADDITIONAL INFORMATION
Screenshot attached
Comment 1 Bug Janitor Service 2020-09-27 23:00:09 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/syntax-highlighting/-/merge_requests/72
Comment 2 Christoph Cullmann 2020-09-28 19:15:27 UTC
Git commit 498db9aaa888f994c282bda6de98e22b40c1cf7b by Christoph Cullmann, on behalf of jonathan poelen.
Committed on 28/09/2020 at 19:15.
Pushed by cullmann into branch 'master'.

Fix doxygen latex formulas

M  +7    -0    autotests/folding/highlight.cpp.fold
M  +7    -0    autotests/html/highlight.cpp.dark.html
M  +7    -0    autotests/html/highlight.cpp.html
M  +7    -0    autotests/input/highlight.cpp
M  +7    -0    autotests/reference/highlight.cpp.ref
M  +9    -9    data/syntax/doxygen.xml

https://invent.kde.org/frameworks/syntax-highlighting/commit/498db9aaa888f994c282bda6de98e22b40c1cf7b