Fix doxygen latex formulas

BUG: 426466